<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shade_gray"
    android:paddingStart="@dimen/padding_normal"
    android:paddingTop="@dimen/padding_normal_half"
    android:paddingEnd="@dimen/padding_normal"
    android:paddingBottom="@dimen/padding_normal_half">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.5"
        android:shadowColor="@color/gray_4"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/week"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.5"
        android:shadowColor="@color/gray_4"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:gravity="center"
        android:shadowColor="@color/gray_4"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_low_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="end"
        android:shadowColor="@color/gray_4"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/lowest"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_high_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="end"
        android:shadowColor="@color/gray_4"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/highest"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>