<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="info"
            type="com.thread0.weather.data.model.Restriction" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_00DEFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_return">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/punish_text"
                android:textColor="@color/white"
                android:textSize="?attr/MediumText" />

        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.activity.CarRestrictedInfoActivity">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/publish_text"
                    android:textColor="@color/red_FA5F"
                    android:textSize="?attr/LargeText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.049"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/publish_text"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:text="@{info.penalty}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="京牌罚100块，不扣分。非京牌罚100块，扣3分。" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/restrict_region_text"
                    android:textColor="@color/red_FA5F"
                    android:textSize="?attr/LargeText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.049"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/publish_text" />

                <TextView
                    android:id="@+id/region_text"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@{info.region}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:text="五环路以内道路（不包括五环路主路）" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/remarks_text"
                    android:textColor="@color/red_FA5F"
                    android:textSize="?attr/LargeText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/region_text" />

                <TextView
                    android:id="@+id/remarks_text"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:padding="5dp"
                    android:text="@{info.remarks}"
                    android:textSize="?attr/SmallText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:text="临时号牌按号牌尾号数字限行。机动车车尾号为英文字母的按0号管理。本市核发号牌的纯电动小客车不受工作日高峰时段区域限行措施限制。警车、消防车、救护车、出租车、环卫车等非民用车辆不受上述限制, 外埠车辆工作日7时至9时、17时至20时禁止进五环（含），没有进京证禁止进六环（不含）" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/future_car_restriction_text"
                    android:textColor="@color/red_FA5F"
                    android:textSize="?attr/LargeText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/remarks_text" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date_today_text"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/restrict_numbers1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`尾号：` + info.limits[0].plates.toString()}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.045"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:text="尾号：1,2" />

                <TextView
                    android:id="@+id/restrict_type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`类型:` + info.limits[0].memo}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.051"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restrict_numbers1"
                    tools:text="类型:尾号限行" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_tomorrow_text"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restrict_type1" />

                <TextView
                    android:id="@+id/restrict_numbers2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`尾号：` + info.limits[1].plates.toString()}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.045"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:text="尾号：1,2" />

                <TextView
                    android:id="@+id/restrict_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`类型:` + info.limits[1].memo}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.051"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restrict_numbers2"
                    tools:text="类型:尾号限行" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_day_after_tomorrow_text"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restrict_type2" />

                <TextView
                    android:id="@+id/restrict_numbers3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`尾号：` + info.limits[2].plates.toString()}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.045"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    tools:text="尾号：1,2" />

                <TextView
                    android:id="@+id/restrict_type3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`类型:` + info.limits[2].memo}"
                    android:textSize="?attr/MediumText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.051"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restrict_numbers3"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="类型:尾号限行" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>